# hoo-gpu

./: CMakeLists.txt  README.md
hoominer/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  mmp-external.conf  mmp-launcher.sh  mmp-stats.sh
hoominer/cubins/: hoohash_sm_100.cubin  hoohash_sm_120.cubin  hoohash_sm_50.cubin  hoohash_sm_52.cubin  hoohash_sm_60.cubin  hoohash_sm_61.cubin  hoohash_sm_70.cubin  hoohash_sm_75.cubin  hoohash_sm_80.cubin  hoohash_sm_86.cubin  hoohash_sm_89.cubin  hoohash_sm_90.cubin
src/: blake3_cuda.cu  blake3_cuda.cuh  hoohash.cu  hoohash.cuh  main.cu  stratum.cpp  stratum.h  utils.h
test/: test_hoohash.cu
